Marketo MA Changelog
---------------------

Marketo MA 7.x-1.x, 2016-09-12
------------------------------
- drush mma-fields now requires drush 6 or higher and allows display of
  additional field attributes. See 'drush help mma-fields'.
- #2335897: Hooks added to provide modules an opportunity to modify lead data.
- #2190655: Introduced Marketo Forms 2.0 tracking method for Webforms. Webforms
  can now override the default tracking method and when using Forms 2.0 can
  specify the Marketo form which should be targeted.
- #2507733: User Integration now allow mapping core user object fields.
- #2567255: Resolved undefined property error when saving user object.
- #2765039: Ensure Marketo javascript is only loaded once.
- Updated test suite to follow drupal_ti

Marketo MA 7.x-1.5, 2014-08-20
------------------------------
- #2293425: SOAP request/response XML now included in log on syncLead errors
- Cleanup additional variables on uninstall
- Addition of automated testing with Behat and Travis

Marketo MA 7.x-1.4, 2014-08-20
------------------------------
- No change. Bad version.

Marketo MA 7.x-1.3, 2014-04-21
------------------------------
- #2137397: Tracking will now be OFF when role visibility is set to
  "Only the roles selected below" and no roles are selected
- #2135305: Removed mma-get-activity from drush commands and moved functionality
  to improved mma-get-lead command. Activity is now retrieved by adding the
  --activity option to mma-get-lead.
- #2139977: Corrected issue related to removal of a mapped field from the field
  definition list. When a field is removed, any currently mapped fields will
  remain intact and display as an "Undefined Field (fieldname)".
- #2140487: Message is now displayed when webform configuration has been saved.
- #2142243: Permission "administer marketo webform settings" now works properly.
- #2215199: Undefined index no longer returned on webform submissions with
  unmapped fields.

Marketo MA 7.x-1.2, 2013-11-14